--- a/familiarity.html
+++ b/familiarity.html
@@ -13,7 +13,6 @@
         AWS Cloud Practitioner certification
     </li><br/>
     <li>
-        Hands on experience in CMS tools like WordPress and
-        ICIMS.
+        Hands on experience in CMS tools like WordPress an.
     </li>
 </ul>
